src/objects/MCL_Sort_Entry__c.object
<CustomObject>
    <description>MCL.Defines a sorting level for an MCL report.</description>
    <fields>
        <fullName>Contact_Field_Name__c</fullName>
        <label>Contact Field Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a header is rendered for this sort level.</description>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCL_Report__c</fullName>
        <label>MCL Report</label>
        <referenceTo>MCL_Report__c</referenceTo>
        <relationshipLabel>MCL Sort Entries</relationshipLabel>
        <relationshipName>MCL_Sort_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Page_Break__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether report pages are broken on this sort level.</description>
        <label>Page Break</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Level__c</fullName>
        <description>The sort level for this entry (1=highest).</description>
        <label>Sort Level</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>MCL Sort Entries</relationshipLabel>
        <relationshipName>MCL_Sort_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MCL Sort Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Field_Name__c</columns>
        <columns>MCL_Report__c</columns>
        <columns>Sort_Level__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Header__c</columns>
        <columns>Page_Break__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCL Sort Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Field_name_or_question_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Contact_Field_Name__c) &amp;&amp; ISNULL(Survey_Question__c)</errorConditionFormula>
        <errorMessage>Field name or survey question must be specified.</errorMessage>
    </validationRules>
</CustomObject>